fixex overflow Y

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
     "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: auto !important;
 }
 
 code {
